2005-11-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c: request motion hints in
	the navigation popup and redraw the window immidiately to give
	better feedback.

2005-11-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.c: moved the controls closer to the
	preview.

2005-11-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpzoompreview.c: zoom on Ctrl-Scroll events.

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_area_event): correctly clamp adjustment
	value on scroll events. Ignore scroll events when Ctrl is pressed.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_area_event): scroll using the mouse wheel.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added "Animators" placeholder.

	* plug-ins/script-fu/script-fu.c (script_fu_extension_init):
	removed registration of "Animators" submenu.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselectoptions.[ch]
	* app/tools/gimpforegroundselecttool.c: renamed "discontiguous" to
	"continuous", both in the UI and as a variable.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* app/actions/context-actions.c (context_brush_radius_actions):
	added default keyboard shortcuts for changing the brush radius
	as suggested in bug #322028.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpzoommodel.c (gimp_zoom_button_new): connect
	to the model's "zoomed" signal and set the button sensitivity.

2005-11-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/MapObject/mapobject_main.[ch]
	* plug-ins/MapObject/mapobject_preview.c
	* plug-ins/MapObject/mapobject_ui.c: must not keep pointers in the
	struct that is being used to preserve data between invocations of
	the plug-in. Fixes bug #321932.

2005-11-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppaintoptions-gui.c
	* app/tools/gimpselectionoptions.c: code cleanup.
